Development Portal (2020-02-05 shi)
==============================
Add contact-info and policy-marker new SAVi


Development Portal (2020-02-04 shi)
==============================
Add planned-disbursement new SAVi
Update css for transaction and budget tables
Add recipient-region new SAVi
Update debug page for new SAVi with more examples


Development Portal (2020-02-01 shi)
==============================
Update css for new SAVi dates


Development Portal (2020-01-31 shi)
==============================
Update text for projects ending soon
Update css for org file and projects ending soon list
Update new SAVi sections for when data is not found
Add all current SAVi elements


Development Portal (2020-01-30 shi)
==============================
Remove publisher-specific back button on general lists


Development Portal (2020-01-04 shi)
==============================
Update IATI Spend default year to 2017
Update footer text for how data is used


Development Portal (2019-12-09 shi)
==============================
Fix sector group and category icons and text
Fix dflat SAVi date div
Add glossary for Sector graphs


Development Portal (2019-11-21 shi)
==============================
Update all target_blank with noopener and noreferrer
Commafy remaining stats and numbers


Development Portal (2019-11-20 shi)
==============================
Add external search input filter and css
Add placeholder text and style
Add translations for external search
List filters in alphabetical order
Rearrange sections
Add related activity and tied status filter
Update translations for new filters
Update help section


Development Portal (2019-11-19 shi)
==============================
Update humanitarian filter


Development Portal (2019-11-18 shi)
==============================
Add result type and documentary category as filters
Add translations
Add wildcard for document category
Add humanitarian-scope, transaction type
Add default flow, collaboration type
Update translations with new filters